--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body div.white-box {
 h1 {
     margin: 0;
     margin-bottom: 10px;
-    -webkit-text-stroke: 1px black;
+    -webkit-text-stroke: 0.5px rgba(255, 255, 255, 0.445);
     font-family: Georgia, serif;
     font-size: 45px;
     background: linear-gradient(#eee, rgb(252, 109, 0));
@@ -43,7 +43,7 @@ h1 {
 
 .button3 {
     margin: 12px 20px;
-    width: 50px;
+    width: 100px;
     height: 50px;
     cursor: pointer;
     font-size: 20px;
@@ -62,15 +62,9 @@ h1 {
     background-color: #ffae00;
 }
 
-h1 {
-    margin-block-start: auto;
-    /* margin-block-end: auto; */
-    /* margin-bottom: auto; */
-}
-
 h2 {
-    margin-block-start: auto;
-    margin-block-end: auto;
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 
 .stats-row {
@@ -78,16 +72,25 @@ h2 {
     justify-content: space-evenly;
     background-color: rgb(192, 192, 192);
     margin-bottom: 10px;
-    /* padding: 0 15px; */
+    padding: 10px 0px;
     border-radius: 15px;
+    /* width: 550px; */
 }
 
 .lives {
     letter-spacing: 2px;
-    /* border: solid rgba(245, 245, 245, 0.557) 1px; */
     border-radius: 10%;
     text-align: center;
     width: 85px;
+}
+
+.safe-click button {
+    background-color: rgba(255, 255, 255, 0);
+    border: solid rgba(245, 245, 245, 0.557) 1px;
+    border-radius: 7%;
+    background-color: #fff;
+    /* width: 40px; */
+    height: 40px;
 }
 
 .smile button {
@@ -95,15 +98,12 @@ h2 {
     border: solid rgba(245, 245, 245, 0.557) 1px;
     border-radius: 10%;
     background-color: #fff;
-    /* margin: auto 0; */
     width: 40px;
     height: 40px;
 }
 
 .timer {
-    /* border: solid rgba(245, 245, 245, 0.557) 1px; */
     border-radius: 10%;
-    /* padding: 4px; */
     width: 85px;
     text-align: center;
     display: inline-block;
@@ -146,4 +146,18 @@ td {
     height: 40px;
     padding: 0px;
     transition: .5s;
+}
+
+.points {
+    color: ivory;
+}
+
+.points td {
+    width: 70px;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.points td:first-child {
+    width: 10px;
+    background-color: rgba(255, 255, 255, 0);
 }
